--- a/personal-website.css
+++ b/personal-website.css
@@ -2,9 +2,13 @@ body{
     background-color:#0a0a0a;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 40px;
+    padding: 0;
     font-family: "Inter" sans-serif;
     font-weight: 500;
+    margin: 0;
+    width: 100%;
+    overflow-x:hidden;
+    box-sizing: border-box;
 }
 
 
@@ -241,4 +245,5 @@ footer hr{
 {
     font-size: 20px;
     text-align: justify;
+
 }
