--- a/personal-website.css
+++ b/personal-website.css
@@ -65,6 +65,9 @@ body{
     margin-top: 10px;
     
 }
+.function-header a{
+    text-decoration: none;
+}
 .call-now-btn
 {
     padding: 8px 10px;
@@ -247,3 +250,4 @@ footer hr{
     text-align: justify;
 
 }
+
